--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Fundamentos, aplicações e comandos.</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>História, Conceitos, Aplicações e comandos</p>
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
         </article>
     </main>    
 </body>
